# aws-state-machine

./: Pipfile  README.md  cloud-config.json  package.sh  pyproject.toml  python.sh  setup.cfg
src/StateMachine/: deploy.py  state_machine.py
src/StateMachine/CloudFormation/: dynamodb.py
src/aws-state-machine/: state-machine.py
