[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "StateMachine"
version = "0.1.0"

license = { file = "LICENSE" }

readme = "README.md"

description = "Python State Machine with syncing data to AWS 
dynamodb"
authors = [ { name = "Michael Mattie" , email = "codermattie@runbox.com" } ]

dependencies = [ 
	"boto3 > 1.24, < 1.25",
	"cfconfig <1.0"
]

[project.urls]
homepage = "https://github.com/coderofmattie/aws-state-machine"
repository = "https://github.com/coderofmattie/aws-state-machine.git"


